materi mini apps gradio_msql

--- a/DSC-Repository/[GOLD] Chapter 4/2_SQLite_Database_Query.ipynb
+++ b/DSC-Repository/[GOLD] Chapter 4/2_SQLite_Database_Query.ipynb
@@ -2225,6 +2225,32 @@
     "# cek hasil dataframe\n",
     "taxi_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_bersih = [\"Data bersih\", \"data.....\", \"\"]\n",
+    "\n",
+    "pd.DataFrame(data_bersih)\n",
+    "pd.to_sql()"
+   ]
   }
  ],
  "metadata": {
