--- a/DSC-Repository/[GOLD] Chapter 4/1_Database Establishment.ipynb
+++ b/DSC-Repository/[GOLD] Chapter 4/1_Database Establishment.ipynb
@@ -22,20 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
-    "connection = sqlite3.connect('mysqlsampledatabase.sql')"
+    "connection = sqlite3.connect('database/test.db')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -48,11 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection = sqlite3.connect('database/test.db')"
+    "import sqlite3\n",
+    "connection = sqlite3.connect('test.db')"
    ]
   },
   {
@@ -82,20 +76,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect('database/test_db.db')\n",
-    "cursorobj = conn.cursor()"
+    "connection = sqlite3.connect('database/test.db')\n",
+    "cursorObj = connection.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7ffc2004c110>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursorObj"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,12 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursorobj.execute(\"CREATE TABLE employees(id integer PRIMARY KEY, name text, salary real, department txt, position text, hiredDate text)\")\n",
-    "conn.commit()"
+    "# employees(id, name, salary, department, position, hireDate)\n",
+    "#Drop Table\n",
+    "cursorObj.execute(\"DROP TABLE IF EXISTS employees\")\n",
+    "connection.commit()\n",
+    "\n",
+    "#Execute command from cursor object\n",
+    "cursorObj.execute(\"CREATE TABLE employees(id integer PRIMARY KEY, name text, salary real, department text, position text, hireDate text)\")\n",
+    "connection.commit()"
    ]
   },
   {
@@ -154,15 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cursorobj.execute(\"DROP TABLE IF EXISTS employees\")\n",
-    "# conn.commit()\n",
-    "\n",
-    "cursorobj.execute(\"INSERT INTO employees VALUES(1, 'Michale', 600, 'HR', 'Manager', '2017-01-04')\")\n",
-    "conn.commit()"
+    "cursorObj.execute(\"INSERT INTO employees VALUES(1, 'John',700, 'HR', 'Manager', '2017-01-04')\")\n",
+    "connection.commit()"
    ]
   },
   {
@@ -191,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "entities = (2, 'Andrew', 800, 'IT', 'Tech', '2018-02-06')\n",
+    "#buat variable\n",
+    "entities = (2, 'Andrew', 800, 'IT', 'Tech', '2018-02-2016')\n",
     "\n",
-    "# Execute INSERT statement\n",
-    "cursorobj.execute('''INSERT INTO employees(id, name, salary, department, position, hiredDate) VALUES(?, ?, ?, ?, ?, ?)''', \n",
-    "                  entities)\n",
-    "conn.commit()"
+    "#execute SQL statement INSERT\n",
+    "cursorObj.execute('''INSERT INTO employees(id, name, salary, department, position, hireDate)VALUES(?,?,?,?,?,?)''', entities)\n",
+    "connection.commit()"
    ]
   },
   {
@@ -226,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,11 +244,10 @@
     "            (4, 'Andreas', 650, 'HR', 'Admin', '2018-08-22'),\n",
     "            (5, 'Trias', 920, 'Tech', 'Manager', '2012-01-29')]\n",
     "\n",
-    "# Execute INSERT statement inside loop\n",
     "for entity in entities:\n",
-    "    cursorobj.execute('''INSERT INTO employees(id, name, salary, department, position, hiredDate) VALUES(?, ?, ?, ?, ?, ?)''', \n",
+    "    cursorObj.execute('''INSERT INTO employees(id, name, salary, department, position, hireDate) VALUES(?,?,?,?,?,?)''',\n",
     "                      entity)\n",
-    "    conn.commit()"
+    "connection.commit()"
    ]
   },
   {
@@ -261,12 +270,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursorobj.execute('UPDATE employees SET name = \"Rogers\" where id = 2')\n",
-    "conn.commit()"
+    "cursorObj.execute('UPDATE employees SET name = \"Rogers\" where id = 2')\n",
+    "connection.commit()"
    ]
   },
   {
@@ -299,35 +308,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 'Michale', 600.0, 'HR', 'Manager', '2017-01-04'),\n",
-       " (2, 'Rogers', 800.0, 'IT', 'Tech', '2018-02-06'),\n",
-       " (3, 'Phillip', 750.0, 'Finance', 'Accounting', '2016-05-12'),\n",
-       " (4, 'Andreas', 650.0, 'HR', 'Admin', '2018-08-22'),\n",
-       " (5, 'Trias', 920.0, 'Tech', 'Manager', '2012-01-29')]"
+       "<sqlite3.Cursor at 0x7ffc2004c110>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cursorobj.execute(\"SELECT * FROM employees\")\n",
-    "cursorobj.fetchall()"
+    "cursorObj.execute('SELECT * FROM employees')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 'John', 700.0, 'HR', 'Manager', '2017-01-04'),\n",
+       " (2, 'Rogers', 800.0, 'IT', 'Tech', '2018-02-2016'),\n",
+       " (3, 'Phillip', 750.0, 'Finance', 'Accounting', '2016-05-12'),\n",
+       " (4, 'Andreas', 650.0, 'HR', 'Admin', '2018-08-22'),\n",
+       " (5, 'Trias', 920.0, 'Tech', 'Manager', '2012-01-29')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursorObj.execute(\"SELECT * FROM employees\")\n",
+    "cursorObj.fetchall()"
+   ]
   },
   {
    "cell_type": "code",
@@ -358,23 +380,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 'Michale', 600.0, 'HR', 'Manager', '2017-01-04')"
+       "(1, 'John')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cursorobj.execute(\"SELECT * FROM employees\")\n",
-    "cursorobj.fetchone()"
+    "cursorObj.execute(\"SELECT id, name FROM employees\")\n",
+    "cursorObj.fetchone()"
    ]
   },
   {
@@ -388,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -397,82 +419,14 @@
        "[(5,)]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cursorobj.execute(\"SELECT count(*) FROM employees\")\n",
-    "cursorobj.fetchall()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Auto increment SQLite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sqlite3\n",
-    "conn = sqlite3.connect('database/test_autoincrement.db')\n",
-    "cursorobj = conn.cursor()\n",
-    "\n",
-    "cursorobj.execute(\"CREATE TABLE employees(id integer PRIMARY KEY, name text, salary real, department txt, position text, hiredDate text)\")\n",
-    "conn.commit()\n",
-    "\n",
-    "entities = [('Phillip', 750, 'Finance', 'Accounting', '2016-05-12'),\n",
-    "            ('Andreas', 650, 'HR', 'Admin', '2018-08-22'),\n",
-    "            ('Trias', 920, 'Tech', 'Manager', '2012-01-29')]\n",
-    "\n",
-    "# Execute INSERT statement inside loop\n",
-    "for entity in entities:\n",
-    "    cursorobj.execute('''INSERT INTO employees(name, salary, department, position, hiredDate) VALUES(?, ?, ?, ?, ?)''', \n",
-    "                      entity)\n",
-    "    conn.commit()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Read csv column with looping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['alay', 'ampas', 'buta', 'keparat', 'anjing', 'anjir', 'babi', 'bacot', 'bajingan', 'banci', 'bandot', 'buaya', 'bangkai', 'bangsat', 'bego', 'bejat', 'bencong', 'berak', 'bisu', 'celeng', 'jancuk', 'bodoh', 'berengsek', 'budek', 'burik', 'jamban', 'cocot', 'congor', 'culun', 'cupu', 'dongok', 'dungu', 'edan', 'tai', 'ngewe', 'geblek', 'gembel', 'gila', 'goblok', 'iblis', 'idiot', 'jablay', 'jembud', 'jembut', 'jijik', 'kacrut', 'kafir', 'modar', 'kampang', 'kampret', 'kampungan', 'kimak', 'kontol', 'kunti', 'tuyul', 'kunyuk', 'mampus', 'memek', 'monyet', 'najis', 'nete', 'ngentot', 'noob', 'pecun', 'perek', 'sampah', 'sarap', 'setan', 'silit', 'bokong', 'sinting', 'sompret', 'sontoloyo', 'terkutuk', 'titit', 'pantat', 'tolol', 'udik', 'antek', 'asing', 'ateis', 'sitip', 'autis', 'picek', 'ayam kampus', 'bani kotak', 'bispak', 'bisyar', 'bokep', 'bong', 'cacat', 'cct', 'cebong', 'taplak', 'cungkring', 'gay', 'gembrot', 'gendut', 'hina', 'homo', 'komunis', 'koreng', 'krempeng', 'lengser', 'lesbi', 'lgbt', 'lonte', 'mucikari', 'munafik', 'ngaceng', 'nista', 'kejam', 'onta', 'panastak', 'panasbung', 'bani', 'pasukan nasi', 'porno', 'seks', 'rejim', 'rezim', 'sange', 'serbet', 'sipit', 'transgender']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "data = pd.read_csv(\"/Users/itdeveloper/Documents/Binar_DS_bootcamp/DSC-Repository/Challange GOLD/abusive.csv\")\n",
-    "\n",
-    "abusive_list = data['ABUSIVE'].tolist()\n",
-    "\n",
-    "abusive_arr = []\n",
-    "\n",
-    "for i, abusive_df in enumerate(abusive_list):\n",
-    "    abusive_arr.append(abusive_df)\n",
-    "\n",
-    "print(abusive_arr)"
+    "cursorObj.execute(\"SELECT count(*) FROM employees\")\n",
+    "cursorObj.fetchall()"
    ]
   }
  ],
